--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-09 Sat 12:13]
+#+CAPTION: Clock summary at [2017-12-09 Sat 12:21]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *56:28* |       |       | 100.0 |
+| *Total time*                                                                | *56:35* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 56:28   |       |       | 100.0 |
-| Active                                                                      |         | 56:28 |       | 100.0 |
+| Stories                                                                     | 56:35   |       |       | 100.0 |
+| Active                                                                      |         | 56:35 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.9 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:13 |   3.9 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.0 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  15.4 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  24.3 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  15.3 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  24.2 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.2 |
 | COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  28.4 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.7 |
@@ -37,7 +37,7 @@
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.9 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.5 |
 | STARTED Create the =external= model                                         |         |       |  2:38 |   4.7 |
-| STARTED Create a =probing= model                                            |         |       |  1:15 |   2.2 |
+| STARTED Create a =probing= model                                            |         |       |  1:22 |   2.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -545,6 +545,7 @@ Notes:
 - rename adapter to factory to match processed object.
 
 *** STARTED Create a =probing= model                                  :story:
+    CLOCK: [2017-12-09 Sat 12:14]--[2017-12-09 Sat 12:21] =>  0:07
     CLOCK: [2017-12-09 Sat 12:02]--[2017-12-09 Sat 12:13] =>  0:11
     CLOCK: [2017-12-09 Sat 11:45]--[2017-12-09 Sat 12:01] =>  0:16
     CLOCK: [2017-12-09 Sat 11:29]--[2017-12-09 Sat 11:44] =>  0:15
