--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-09 Sat 12:32]
+#+CAPTION: Clock summary at [2017-12-09 Sat 12:47]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *56:45* |       |       | 100.0 |
+| *Total time*                                                                | *56:59* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 56:45   |       |       | 100.0 |
-| Active                                                                      |         | 56:45 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.9 |
+| Stories                                                                     | 56:59   |       |       | 100.0 |
+| Active                                                                      |         | 56:59 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.8 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:23 |   4.2 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.0 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  15.3 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  24.2 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  15.2 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  24.1 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.1 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  28.3 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  28.2 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.7 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.5 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.4 |
@@ -35,9 +35,9 @@
 | COMPLETED Simplify input model generation in cmake                          |         |       |  0:38 |   1.1 |
 | COMPLETED Create a =probing= model                                          |         |       |  1:22 |   2.4 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.2 |
-| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.9 |
+| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.8 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.5 |
-| STARTED Create the =external= model                                         |         |       |  2:38 |   4.6 |
+| STARTED Create the =external= model                                         |         |       |  2:52 |   5.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -548,6 +548,7 @@ property of an exomodel. If we do this we can then do the mapping in
 flight as we transform from exomodel to endomodel.
 
 *** STARTED Create the =external= model                               :story:
+    CLOCK: [2017-12-09 Sat 12:33]--[2017-12-09 Sat 12:47] =>  0:14
     CLOCK: [2017-12-06 Wed 20:43]--[2017-12-06 Wed 23:21] =>  2:38
 
 Create a new model called =external= and move all exogenous model
