--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-09 Sat 16:01]
+#+CAPTION: Clock summary at [2017-12-09 Sat 16:19]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *58:39* |       |       | 100.0 |
+| *Total time*                                                                | *58:56* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 58:39   |       |       | 100.0 |
-| Active                                                                      |         | 58:39 |       | 100.0 |
+| Stories                                                                     | 58:56   |       |       | 100.0 |
+| Active                                                                      |         | 58:56 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.8 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:23 |   4.1 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:23 |   4.0 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.0 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  14.8 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  23.4 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  14.7 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  23.3 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.0 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  27.4 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  27.2 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.7 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.4 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.3 |
@@ -37,7 +37,7 @@
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.0 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.8 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.5 |
-| STARTED Create the =external= model                                         |         |       |  4:32 |   7.7 |
+| STARTED Create the =external= model                                         |         |       |  4:49 |   8.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -548,6 +548,7 @@ property of an exomodel. If we do this we can then do the mapping in
 flight as we transform from exomodel to endomodel.
 
 *** STARTED Create the =external= model                               :story:
+    CLOCK: [2017-12-09 Sat 16:02]--[2017-12-09 Sat 16:19] =>  0:17
     CLOCK: [2017-12-09 Sat 15:23]--[2017-12-09 Sat 16:01] =>  0:38
     CLOCK: [2017-12-09 Sat 14:34]--[2017-12-09 Sat 15:22] =>  0:48
     CLOCK: [2017-12-09 Sat 12:48]--[2017-12-09 Sat 13:02] =>  0:14
