--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,31 +13,32 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-09 Sat 16:38]
+#+CAPTION: Clock summary at [2017-12-09 Sat 16:47]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *59:14* |       |       | 100.0 |
+| *Total time*                                                                | *59:23* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 59:14   |       |       | 100.0 |
-| Active                                                                      |         | 59:14 |       | 100.0 |
+| Stories                                                                     | 59:23   |       |       | 100.0 |
+| Active                                                                      |         | 59:23 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.8 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:23 |   4.0 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.0 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  14.7 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  23.2 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  14.6 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  23.1 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.0 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  27.1 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  27.0 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.7 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.4 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.3 |
 | COMPLETED Clean up tagged values                                            |         |       |  0:23 |   0.6 |
 | COMPLETED Simplify input model generation in cmake                          |         |       |  0:38 |   1.1 |
 | COMPLETED Create a =probing= model                                          |         |       |  1:22 |   2.3 |
+| COMPLETED Create the =external= model                                       |         |       |  5:07 |   8.6 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.0 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.8 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.5 |
-| STARTED Create the =external= model                                         |         |       |  5:07 |   8.6 |
+| STARTED Rename =yarn.dia= to =external.dia=                                 |         |       |  0:09 |   0.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -467,6 +468,33 @@ what we are really saying is that within a transform we may need to
 dump more state than just the initial inputs. We need a way to express
 this in the probing API.
 
+*** COMPLETED Create the =external= model                             :story:
+    CLOSED: [2017-12-09 Sat 16:47]
+    CLOCK: [2017-12-09 Sat 16:20]--[2017-12-09 Sat 16:38] =>  0:18
+    CLOCK: [2017-12-09 Sat 16:02]--[2017-12-09 Sat 16:19] =>  0:17
+    CLOCK: [2017-12-09 Sat 15:23]--[2017-12-09 Sat 16:01] =>  0:38
+    CLOCK: [2017-12-09 Sat 14:34]--[2017-12-09 Sat 15:22] =>  0:48
+    CLOCK: [2017-12-09 Sat 12:48]--[2017-12-09 Sat 13:02] =>  0:14
+    CLOCK: [2017-12-09 Sat 12:33]--[2017-12-09 Sat 12:47] =>  0:14
+    CLOCK: [2017-12-06 Wed 20:43]--[2017-12-06 Wed 23:21] =>  2:38
+
+Create a new model called =external= and move all exogenous model
+related class to it.
+
+Consider naming it =codec=.
+
+We should also split the model into the usual transforms, helpers,
+meta-model etc split. The top level transforms should be:
+
+- to dia diagram
+- to processed object
+- to model
+
+Notes:
+
+- we should have a dia to codec model chain.
+- rename adapter to factory to match processed object.
+
 *** STARTED Finish setting up coveralls                               :story:
     CLOCK: [2017-11-29 Wed 23:48]--[2017-11-30 Thu 00:21] =>  0:33
     CLOCK: [2017-11-29 Wed 22:45]--[2017-11-29 Wed 23:47] =>  1:02
@@ -547,31 +575,10 @@ there are two different kinds of exomodels: proxyness is a fundamental
 property of an exomodel. If we do this we can then do the mapping in
 flight as we transform from exomodel to endomodel.
 
-*** STARTED Create the =external= model                               :story:
-    CLOCK: [2017-12-09 Sat 16:20]--[2017-12-09 Sat 16:38] =>  0:18
-    CLOCK: [2017-12-09 Sat 16:02]--[2017-12-09 Sat 16:19] =>  0:17
-    CLOCK: [2017-12-09 Sat 15:23]--[2017-12-09 Sat 16:01] =>  0:38
-    CLOCK: [2017-12-09 Sat 14:34]--[2017-12-09 Sat 15:22] =>  0:48
-    CLOCK: [2017-12-09 Sat 12:48]--[2017-12-09 Sat 13:02] =>  0:14
-    CLOCK: [2017-12-09 Sat 12:33]--[2017-12-09 Sat 12:47] =>  0:14
-    CLOCK: [2017-12-06 Wed 20:43]--[2017-12-06 Wed 23:21] =>  2:38
+*** STARTED Rename =yarn.dia= to =external.dia=                       :story:
+    CLOCK: [2017-12-09 Sat 16:38]--[2017-12-09 Sat 16:47] =>  0:09
 
-Create a new model called =external= and move all exogenous model
-related class to it.
-
-Consider naming it =codec=.
-
-We should also split the model into the usual transforms, helpers,
-meta-model etc split. The top level transforms should be:
-
-- to dia diagram
-- to processed object
-- to model
-
-Notes:
-
-- we should have a dia to codec model chain.
-- rename adapter to factory to match processed object.
+As per analysis story, we are moving away from the sewing terms.
 
 *** Add support for "ad-hoc" probing                                  :story:
 
@@ -602,10 +609,6 @@ As per analysis story, we are moving away from the sewing terms.
 As per analysis story, we are moving away from the sewing terms.
 
 *** Rename =quilt.csharp= to =generation.csharp=                      :story:
-
-As per analysis story, we are moving away from the sewing terms.
-
-*** Rename =yarn.dia= to =external.dia=                               :story:
 
 As per analysis story, we are moving away from the sewing terms.
 
