--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,33 +13,33 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-09 Sat 23:21]
+#+CAPTION: Clock summary at [2017-12-10 Sun 00:09]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *62:12* |       |       | 100.0 |
+| *Total time*                                                                | *62:59* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 62:12   |       |       | 100.0 |
-| Active                                                                      |         | 62:12 |       | 100.0 |
+| Stories                                                                     | 62:59   |       |       | 100.0 |
+| Active                                                                      |         | 62:59 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.7 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:23 |   3.8 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   0.9 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  14.0 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  22.1 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.8 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  25.8 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  13.8 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  21.8 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.7 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  25.5 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.7 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.2 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.3 |
 | COMPLETED Clean up tagged values                                            |         |       |  0:23 |   0.6 |
 | COMPLETED Simplify input model generation in cmake                          |         |       |  0:38 |   1.0 |
 | COMPLETED Create a =probing= model                                          |         |       |  1:22 |   2.2 |
-| COMPLETED Create the =external= model                                       |         |       |  5:07 |   8.2 |
+| COMPLETED Create the =external= model                                       |         |       |  5:07 |   8.1 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   4.7 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.7 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.5 |
-| STARTED Rename =yarn.dia= to =external.dia=                                 |         |       |  1:06 |   1.8 |
-| STARTED Rename =yarn.json= to =external.json=                               |         |       |  1:12 |   1.9 |
+| STARTED Rename =yarn.dia= to =external.dia=                                 |         |       |  1:20 |   2.1 |
+| STARTED Rename =yarn.json= to =external.json=                               |         |       |  1:45 |   2.8 |
 | STARTED Remove exomodel and all deprecated classes                          |         |       |  0:40 |   1.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -578,6 +578,7 @@ property of an exomodel. If we do this we can then do the mapping in
 flight as we transform from exomodel to endomodel.
 
 *** STARTED Rename =yarn.dia= to =external.dia=                       :story:
+    CLOCK: [2017-12-09 Sat 23:21]--[2017-12-09 Sat 23:35] =>  0:14
     CLOCK: [2017-12-09 Sat 22:17]--[2017-12-09 Sat 22:38] =>  0:21
     CLOCK: [2017-12-09 Sat 17:26]--[2017-12-09 Sat 17:28] =>  0:02
     CLOCK: [2017-12-09 Sat 17:01]--[2017-12-09 Sat 17:25] =>  0:24
@@ -589,6 +590,7 @@ flight as we transform from exomodel to endomodel.
 As per analysis story, we are moving away from the sewing terms.
 
 *** STARTED Rename =yarn.json= to =external.json=                     :story:
+    CLOCK: [2017-12-09 Sat 23:36]--[2017-12-10 Sun 00:09] =>  0:33
     CLOCK: [2017-12-09 Sat 21:46]--[2017-12-09 Sat 22:16] =>  0:30
     CLOCK: [2017-12-09 Sat 21:24]--[2017-12-09 Sat 21:45] =>  0:21
     CLOCK: [2017-12-09 Sat 21:05]--[2017-12-09 Sat 21:23] =>  0:18
